fixed small gaps

--- a/src/components/components-posts/community-post-create-page/community-post-create-page.scss
+++ b/src/components/components-posts/community-post-create-page/community-post-create-page.scss
@@ -67,9 +67,10 @@
     border: 2px solid #675d59;
     background: #fbfcff;
     display: flex;
-    padding: 50px;
+    padding: 0 50px;
+    padding-bottom: 50px;
     width: 1000px;
-    height: 580px;
+    height: 520px;
     margin: 220px 0;
   }
 
@@ -145,6 +146,10 @@
   }
 
   // right container
+  .create-post-page-right-inner-container {
+    margin-top: 25px;
+  }
+
   .create-post-page-title,
   .create-post-page-description {
     border-radius: 8px;
@@ -259,7 +264,7 @@
 
     .create-post-page-inner-container {
       width: 880px;
-      height: 460px;
+      // height: 490px;
     }
 
     .create-post-page-title,
@@ -284,6 +289,8 @@
     .create-post-page-inner-container {
       display: flex;
       flex-direction: column;
+      overflow-y: auto;
+      padding: 60px 0;
       width: 480px;
       min-height: 800px;
       height: auto;
@@ -293,9 +300,6 @@
     .create-post-page-description {
       width: 370px;
     }
-
-    // .create-post-page-button-wrapper {
-    // }
 
     .create-post-input-radio-button-label {
       font-size: 13px;
